<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	android:orientation="vertical">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:gravity="left"
		android:orientation="vertical">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="left"
			android:layout_margin="5dp" android:orientation="horizontal">

			<ImageView android:id="@+id/imagenProtegerCategorias"
				android:layout_width="28dp" android:layout_height="28dp"
				android:contentDescription="imagenProtegerCategorias" />

			<TextView android:background="@drawable/custom_text_view_categoria"
				android:textColor="@color/color_azul_oscuro" android:layout_width="fill_parent"
				android:layout_height="30dp" android:textSize="14sp"
				android:textStyle="bold" android:layout_marginBottom="10dp"
				android:layout_marginLeft="8dp" android:gravity="center"
				android:text="@string/title_proteccion_categorias">
			</TextView>
		</LinearLayout>


		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_vertical"
			android:layout_margin="3dp" android:orientation="horizontal">



			<TextView android:text="@string/label_contrasenia"
				android:layout_width="160dp" android:layout_height="30dp"
				android:background="@drawable/custom_text_view_categoria_desc"
				android:textColor="@color/color_azul_oscuro" android:padding="5dp"
				android:gravity="right" android:textSize="12sp">
			</TextView>

			<EditText android:id="@+id/contrasenia1" 
				android:textColor="@color/color_azul_oscuro" android:layout_width="fill_parent"
				android:layout_height="35dp" android:padding="4dp"
				android:textSize="14sp" android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp" android:inputType="textPassword"
				android:maxLength="20"
				android:hint="********">
			</EditText>

		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:layout_margin="3dp" android:gravity="center_vertical">



			<TextView android:layout_width="160dp"
				android:layout_height="30dp" android:background="@drawable/custom_text_view_categoria_desc"
				android:textColor="@color/color_azul_oscuro" android:padding="5dp"
				android:gravity="right" android:textSize="12sp"
				android:text="@string/label_repetir_contrasenia">
			</TextView>

			<EditText android:id="@+id/contrasenia2" 
				android:textColor="@color/color_azul_oscuro" android:layout_width="fill_parent"
				android:layout_height="35dp" android:padding="4dp"
				android:textSize="14sp" android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp" android:inputType="textPassword"
				android:maxLength="20"
				android:hint="********">
			</EditText>

		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center_vertical"
			android:layout_margin="3dp" android:orientation="horizontal">

			<TextView android:text="@string/label_mail"
				android:layout_width="70dp" android:layout_height="30dp"
				android:background="@drawable/custom_text_view_categoria_desc"
				android:textColor="@color/color_azul_oscuro" android:padding="5dp"
				android:gravity="right" android:textSize="12sp">
			</TextView>

			<EditText android:id="@+id/mailPassword" 
				android:textColor="@color/color_azul_oscuro" android:layout_width="fill_parent"
				android:layout_height="35dp" android:padding="4dp"
				android:textSize="14sp" android:layout_marginLeft="4dp"
				android:layout_marginRight="4dp" android:inputType="textEmailAddress"
				android:maxLength="90"
				android:hint="@string/label_email">
			</EditText>

		</LinearLayout>


		<Button android:id="@+id/botonRegistrarContrasenia"
			android:layout_width="wrap_content" android:layout_height="30dp"
			android:layout_margin="8dp" android:textColor="@color/color_azul_oscuro"
			android:background="@drawable/custom_button" android:text="@string/label_registrar_contrasenia"
			android:textSize="12sp" android:layout_gravity="right" />

		<View android:id="@+id/linea2" android:layout_width="wrap_content"
			android:layout_height="1px" android:layout_margin="4dp"
			android:background="@color/color_azul" />

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:gravity="center"
			android:layout_margin="6dp" android:orientation="horizontal">


			<Button android:id="@+id/botonActivarContrasenia"
				android:layout_width="wrap_content" android:layout_height="30dp"
				android:textColor="@color/color_azul_oscuro" android:background="@drawable/custom_button"
				android:text="@string/label_desbloquear_contrasenia"
				android:textSize="12sp" />

			<Button android:id="@+id/botonDesactivarContrasenia"
				android:layout_width="wrap_content" android:layout_height="30dp"
				android:layout_marginLeft="20dp" android:textColor="@color/color_azul_oscuro"
				android:background="@drawable/custom_button" android:text="@string/label_bloquear_contrasenia"
				android:textSize="12sp" />

		</LinearLayout>

		<View android:id="@+id/linea1" android:layout_width="wrap_content"
			android:layout_height="1px" android:layout_margin="4dp"
			android:background="@color/color_azul" />
	</LinearLayout>



	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:layout_margin="3dp"
		android:orientation="vertical">

		<TextView android:id="@+id/tituloCategorias"
			android:background="@drawable/custom_text_view_categoria"
			android:textColor="@color/color_azul_oscuro" android:layout_width="fill_parent"
			android:layout_height="25dp" android:textSize="12sp"
			android:textStyle="bold" android:layout_marginBottom="10dp"
			android:layout_marginLeft="8dp" android:gravity="center">
		</TextView>


		<ListView android:id="@android:id/list"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:dividerHeight="8dp" android:divider="@color/color_negro"
			android:fastScrollEnabled="true" android:listSelector="@android:color/transparent">
		</ListView>
		<TextView android:id="@android:id/empty"
			android:layout_width="wrap_content" android:layout_height="wrap_content"
			android:layout_margin="10dp" android:text="@string/text_sinDatos" />
	</LinearLayout>

</LinearLayout>


