<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical">

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_margin="7dp">

		<TextView android:id="@+id/label_nombre_categoria"
			android:text="@string/hint_categoria" android:layout_width="130dp"
			android:layout_height="wrap_content" android:textSize="13sp"
			android:padding="8dp" android:gravity="right" android:singleLine="true"
			android:background="@drawable/custom_text_view_categoria_desc"
			android:textColor="@color/color_azul_oscuro" />


		<EditText android:id="@+id/entryNombreCategoria"
			android:layout_width="fill_parent" android:layout_height="35dp"
			android:hint="@string/hint_categoria" android:inputType="textCapWords"
			android:maxLength="15" android:nextFocusUp="@+id/label_tipo_dato_extra"
			android:padding="8dp" android:textSize="14sp"
			android:layout_marginLeft="9dp" 
			android:textColor="@color/color_azul_oscuro"/>

	</LinearLayout>

	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="horizontal"
		android:layout_margin="7dp">

		<TextView android:id="@+id/label_tipo_dato_extra"
			android:text="@string/hint_caracteristica" android:layout_width="130dp"
			android:layout_height="wrap_content" android:textSize="13sp"
			android:padding="8dp" android:gravity="right" android:singleLine="true"
			android:background="@drawable/custom_text_view_categoria_desc"
			android:textColor="@color/color_azul_oscuro" />

		<EditText android:id="@+id/entryTipoDatoExtra"
			android:layout_width="fill_parent" android:layout_height="35dp"
			android:hint="@string/hint_caracteristica" android:inputType="textCapWords"
			android:layout_marginLeft="9dp" android:maxLength="15" android:textColor="@color/color_azul_oscuro"
			android:textSize="14sp" android:padding="8dp" />
	</LinearLayout>
	<View android:layout_width="wrap_content" android:layout_height="1px"
		android:layout_marginBottom="8dp" android:background="@color/color_azul" />



	<LinearLayout android:layout_height="wrap_content"
		android:layout_width="fill_parent" android:orientation="horizontal"
		android:gravity="center" android:layout_margin="7dp">

		<Button android:id="@+id/buttonRegistrarCategoria"
			android:layout_width="wrap_content" android:layout_height="35dp"
			android:textColor="@color/color_azul" android:background="@drawable/custom_button"
			android:text="@string/label_registrarPersona" android:textSize="13sp" />

		<Button android:id="@+id/buttonEliminarCategoria"
			android:layout_width="wrap_content" android:layout_height="35dp"
			android:textColor="@color/color_azul" android:background="@drawable/custom_button"
			android:layout_marginLeft="15dp" android:text="@string/label_borrarPersona"
			android:textSize="13sp" />

	</LinearLayout>

</LinearLayout>
