<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent">


	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:orientation="vertical">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal">

			<TextView android:id="@+id/categoriaTextView" android:background="@drawable/custom_text_view_categoria"
				android:textColor="@color/color_azul_oscuro" android:layout_width="280dp"
				android:layout_height="30dp" android:textSize="14sp"
				android:textStyle="bold" android:layout_margin="10dp" android:gravity="center"
				android:text="@string/label_categorias">
			</TextView>

			<Button android:id="@+id/addCategoria"
				android:layout_width="32dp" android:layout_height="28dp"
				android:text="+"
				android:textColor="@color/color_azul"
				android:textSize="18sp"
				android:textStyle="bold"
				android:layout_gravity="center"
				android:layout_marginRight="10dp" android:layout_marginLeft="10dp"
				android:layout_below="@id/menu_icons"
				android:contentDescription="addCategory"
				android:paddingBottom="3dp"
				android:paddingTop="1dp"
				android:typeface="monospace"
				android:background="@drawable/custom_button"
				>
			</Button>

		</LinearLayout>

	<LinearLayout
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:orientation="vertical">

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:layout_margin="7dp">

			<TextView android:id="@+id/labelNombreCategoria"
				android:text="@string/hint_categoria" android:layout_width="130dp"
				android:layout_height="wrap_content" android:textSize="13sp"
				android:padding="8dp" android:gravity="end" android:singleLine="true"
				android:background="@drawable/custom_text_view_categoria_desc"
				android:textColor="@color/color_azul_oscuro"
				android:visibility="gone"/>


			<EditText android:id="@+id/entryNombreCategoria"
				android:layout_width="fill_parent" android:layout_height="35dp"
				android:hint="@string/hint_categoria" android:inputType="textCapWords"
				android:maxLength="15" android:nextFocusUp="@+id/label_tipo_dato_extra"
				android:padding="8dp" android:textSize="14sp"
				android:layout_marginStart="9dp"
				android:textColor="@color/color_azul_oscuro"
				android:importantForAutofill="no"
				android:layout_marginLeft="9dp"
				android:visibility="gone"/>

		</LinearLayout>

		<LinearLayout android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:orientation="horizontal"
			android:layout_margin="7dp">

			<TextView android:id="@+id/label_tipo_dato_extra"
				android:text="@string/hint_caracteristica" android:layout_width="130dp"
				android:layout_height="wrap_content" android:textSize="13sp"
				android:padding="8dp" android:gravity="end" android:singleLine="true"
				android:background="@drawable/custom_text_view_categoria_desc"
				android:textColor="@color/color_azul_oscuro"
				android:visibility="gone"/>

			<EditText android:id="@+id/entryTipoDatoExtra"
				android:layout_width="fill_parent" android:layout_height="35dp"
				android:hint="@string/hint_caracteristica" android:inputType="textCapWords"
				android:layout_marginStart="9dp" android:maxLength="15" android:textColor="@color/color_azul_oscuro"
				android:textSize="14sp" android:padding="8dp"
				android:importantForAutofill="no"
				android:layout_marginLeft="9dp"
				android:visibility="gone"/>
		</LinearLayout>
	</LinearLayout>

	<LinearLayout android:id="@+id/linearLista"
		android:layout_width="wrap_content"
		android:layout_height="match_parent"
		android:orientation="vertical">

			<ListView android:id="@android:id/list"
				android:layout_width="fill_parent" android:layout_height="fill_parent"
				android:dividerHeight="10dp" android:divider="@color/color_negro"
				android:listSelector="@android:color/transparent"
				android:cacheColorHint="#00000000"
				android:scrollbars="none"
				android:layout_marginTop="5dp">
			</ListView>
			<TextView android:id="@android:id/empty"
				android:layout_width="wrap_content" android:text="@string/text_sinDatos"
				android:layout_height="wrap_content" />

	</LinearLayout>
	</LinearLayout>

</merge>